--- a/style.css
+++ b/style.css
@@ -118,15 +118,20 @@ html {
 
 body {
 	position: relative;
-	display: table;
 	height: 100%;
 	width: 100%;
 	margin: 0;
-	padding: 5px;
-	overflow: hidden;
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
+}
+
+.body-inner {
+	display: table;
+	height: 100%;
+	width: 100%;
+	padding: 5px;
+	overflow: hidden;
 }
 
 img {
